crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__pass-through env added@cache-miss-reasons.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: e2e_outputs
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/cache-miss-reasons
---
> vite run test
$ print-file test.txt
initial content


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] cache-miss-reasons#test: $ print-file test.txt ✓
      → Cache miss: no previous cache entry found
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/sed",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/dirname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/uname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/node",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "test.txt",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "test.txt",
    ),
    AccessMode(
        READ,
    ),
)

> json-edit vite.config.json "_.tasks.test.passThroughEnvs = ['MY_PASSTHROUGH']"

> vite run test
$ print-file test.txt ✗ cache miss: pass-through env config changed, executing
initial content


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
    Vite+ Task Runner • Execution Summary
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Statistics:   1 tasks • 0 cache hits • 1 cache misses 
Performance:  0% cache hit rate

Task Details:
────────────────────────────────────────────────
  [1] cache-miss-reasons#test: $ print-file test.txt ✓
      → Cache miss: pass-through env 'MY_PASSTHROUGH' added
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/sed",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/dirname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/uname",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "node_modules/.bin/node",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "test.txt",
    ),
    AccessMode(
        READ,
    ),
)
[crates/vite_task/src/session/execute/spawn.rs:194:9] (&relative_path, &access.mode) = (
    RelativePathBuf(
        "test.txt",
    ),
    AccessMode(
        READ,
    ),
)
