crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__query - direct env-test synthetic task@additional-envs.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/additional-envs
---
{
  "root_node": {
    "Leaf": {
      "Spawn": {
        "cache_metadata": {
          "spawn_fingerprint": {
            "cwd": "",
            "program_fingerprint": {
              "OutsideWorkspace": {
                "program_name": "print-env"
              }
            },
            "args": [
              "TEST_VAR"
            ],
            "env_fingerprints": {
              "fingerprinted_envs": {},
              "pass_through_env_config": [
                "TEST_VAR",
                "<default pass-through envs>"
              ]
            },
            "fingerprint_ignores": null
          },
          "execution_cache_key": {
            "kind": {
              "DirectSyntatic": {
                "direct_execution_cache_key": [
                  "env-test",
                  "TEST_VAR",
                  "hello_world"
                ]
              }
            },
            "origin_path": ""
          }
        },
        "spawn_command": {
          "program_path": "<manifest_dir>/test_bins/node_modules/.bin/print-env",
          "args": [
            "TEST_VAR"
          ],
          "all_envs": {
            "NO_COLOR": "1",
            "PATH": "<workspace>/node_modules/.bin:<manifest_dir>/test_bins/node_modules/.bin",
            "TEST_VAR": "hello_world"
          },
          "cwd": "<workspace>/"
        }
      }
    }
  }
}
