crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__query - direct synthetic task with extra args@cache-keys.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/cache-keys
---
{
  "root_node": {
    "Leaf": {
      "Spawn": {
        "cache_metadata": {
          "spawn_fingerprint": {
            "cwd": "",
            "program_fingerprint": {
              "OutsideWorkspace": {
                "program_name": "oxlint"
              }
            },
            "args": [
              "--fix"
            ],
            "env_fingerprints": {
              "fingerprinted_envs": {},
              "pass_through_env_config": [
                "<default pass-through envs>"
              ]
            },
            "fingerprint_ignores": null
          },
          "execution_cache_key": {
            "kind": {
              "DirectSyntactic": {
                "direct_execution_cache_key": [
                  "lint",
                  "--fix"
                ]
              }
            },
            "origin_path": ""
          }
        },
        "spawn_command": {
          "program_path": "<tools>/node_modules/.bin/oxlint",
          "args": [
            "--fix"
          ],
          "all_envs": {
            "NO_COLOR": "1",
            "PATH": "<workspace>/node_modules/.bin:<tools>/node_modules/.bin"
          },
          "cwd": "<workspace>/"
        }
      }
    }
  }
}
