crates/vite_task_bin/tests/test_snapshots/snapshots/test_snapshots__query - lint and echo with extra args@cache-keys.snap
---
source: crates/vite_task_bin/tests/test_snapshots/main.rs
expression: "&plan_json"
input_file: crates/vite_task_bin/tests/test_snapshots/fixtures/cache-keys
---
{
  "root_node": {
    "Expanded": [
      {
        "key": [
          "<workspace>/",
          "lint-and-echo"
        ],
        "node": {
          "task_display": {
            "package_name": "",
            "task_name": "lint-and-echo",
            "package_path": "<workspace>/"
          },
          "items": [
            {
              "command_span": {
                "start": 0,
                "end": 9
              },
              "extra_args": [],
              "plan_cwd": "<workspace>/",
              "kind": {
                "Leaf": {
                  "Spawn": {
                    "cache_metadata": {
                      "spawn_fingerprint": {
                        "cwd": "",
                        "program_fingerprint": {
                          "OutsideWorkspace": {
                            "program_name": "oxlint"
                          }
                        },
                        "args": [],
                        "env_fingerprints": {
                          "fingerprinted_envs": {},
                          "pass_through_env_config": [
                            "<default pass-through envs>"
                          ]
                        },
                        "fingerprint_ignores": null
                      },
                      "execution_cache_key": {
                        "kind": {
                          "UserTask": {
                            "task_name": "lint-and-echo",
                            "and_item_index": 0,
                            "extra_args": []
                          }
                        },
                        "origin_path": ""
                      }
                    },
                    "spawn_command": {
                      "program_path": "<manifest_dir>/test_bins/node_modules/.bin/oxlint",
                      "args": [],
                      "all_envs": {
                        "FORCE_COLOR": "3",
                        "PATH": "<workspace>/node_modules/.bin:<manifest_dir>/test_bins/node_modules/.bin"
                      },
                      "cwd": "<workspace>/"
                    }
                  }
                }
              }
            },
            {
              "command_span": {
                "start": 13,
                "end": 17
              },
              "extra_args": [
                "Linting complete"
              ],
              "plan_cwd": "<workspace>/",
              "kind": {
                "Leaf": {
                  "InProcess": {
                    "kind": {
                      "Echo": {
                        "strings": [
                          "Linting complete"
                        ],
                        "trailing_newline": true
                      }
                    }
                  }
                }
              }
            }
          ]
        },
        "neighbors": []
      }
    ]
  }
}
